--- a/MyUWD/Description
+++ b/MyUWD/Description
@@ -5,6 +5,10 @@ It is a purposefully self-created small multilingual lexical database containing
 
 For each lexical entry, a series of linguistic information are additionally given: Transcription into ideograms and/or non-Latin characters (for JPN only), ISO language code, POS, ambiguity, usage and meaning (for disambiguation and other info about context and frequency of usage), polysemy, frequency (for DE and JPN only), semantic field, synonyms (in English), tags, sentence examples, possible English translation of the sentence example, etymology.
 
+### Definitions 
+Thanks to manual compilation, it was possible to control for the length of the definitions, avoiding extremely long definitions with useless or secondary information, the latter being however inserted as additional features in the other fields of the database.  
+It should be specified that “definitions” here would be better referred to as “senses” because each row of the csv files matches a term with a description expressing one and one only possible usage of that word. Accordingly, a polysemous lexical entry is repeated multiple times throughout the database, as its multiple instances are each associated with a sentence indicating one precise sense of that word. This enables the differential contexts of usage of a specific term along with a practical sentence example to be all plainly and orderly reported in the dictionary dataset. 
+
 ### Semantic Field
 
 A list of 24 categories has been here selected and systematically used to assign each word a semantic field. Inspired by Magnini et al.’s work on the role of domain information in word sense disambiguation (see https://wndomains.fbk.eu/hierarchy.html), it is firmly believed that domain information plays a big/significant part in case of ambiguity and polysemy.
@@ -45,3 +49,7 @@ https://www.duden.de/hilfe/haeufigkeit from Duden’s Corpus
 Levels of Frequency -> 1 to 5    -    % occurrences
 
 0-> obsolete        - (not included or irrelevant)
+
+
+### Example sentences in Lg1
+Just like domain information, sentences showing practical examples on the context of usage of a term wield a strong disambiguating power. On this account, the inclusion of sentence examples, here expressed both in English and in the target languages (German, Italian or Japanese), represents a valuable and essential resource in a dictionary database. 
